{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 210,
  "lineage": "090e9854-a274-42ca-3662-15b400090ec9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf6d2d26a968881e",
            "arn": "arn:aws:ec2:eu-west-3:392002456877:elastic-ip/eipalloc-0cf6d2d26a968881e",
            "domain": "vpc",
            "id": "eipalloc-0cf6d2d26a968881e",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-236-12-44.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.12.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "nat-eip",
              "Terraform": "Yes"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_floiint_db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06295cf54a2a15527",
            "arn": "arn:aws:ec2:eu-west-3:392002456877:instance/i-006e3dd9bdc1414b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006e3dd9bdc1414b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "floiint-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8b2711faeeded65",
            "private_dns": "ip-172-31-1-175.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.175",
            "public_dns": "ec2-15-237-197-16.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.197.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b3a6b929bf34d57",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0ffa30a21372aae47"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0340b773dc1ca33f7",
            "tags": {
              "Name": "ec2-floiint-db-server-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "ec2-floiint-db-server-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffa30a21372aae47"
            ]
          },
          "dependencies": [
            "aws_security_group.sec_group_floiint",
            "aws_subnet.private_subnet_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_floiint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:internet-gateway/igw-00db635f075ac5940",
            "id": "igw-00db635f075ac5940",
            "owner_id": "392002456877",
            "tags": {
              "Name": "igw-floiint-t",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "igw-floiint-t",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "dependencies": [
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_floiiint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf6d2d26a968881e",
            "association_id": "eipassoc-0620854c3d8328c36",
            "connectivity_type": "public",
            "id": "nat-027f3ef5fefb1a294",
            "network_interface_id": "eni-023216b5b8a7909ff",
            "private_ip": "172.31.2.226",
            "public_ip": "15.236.12.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05feca6b353bf1e1b",
            "tags": {
              "Name": "nat-gateway-floiint-t",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "nat-gateway-floiint-t",
              "Terraform": "Yes"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "floiint_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:route-table/rtb-0aea7883e0cb0ee06",
            "id": "rtb-0aea7883e0cb0ee06",
            "owner_id": "392002456877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-027f3ef5fefb1a294",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-floiint-private-route",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "rtb-floiint-private-route",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw_floiiint",
            "aws_subnet.public_subnet_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "floiint_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:route-table/rtb-010b7ef34d2aae39b",
            "id": "rtb-010b7ef34d2aae39b",
            "owner_id": "392002456877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00db635f075ac5940",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-floiint-public-route",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "rtb-floiint-public-route",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124c76a53ed8876a",
            "route_table_id": "rtb-0aea7883e0cb0ee06",
            "subnet_id": "subnet-0340b773dc1ca33f7"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw_floiiint",
            "aws_route_table.floiint_private_route_table",
            "aws_subnet.private_subnet_floiint",
            "aws_subnet.public_subnet_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_floiint_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75c9dc0af92ba97",
            "route_table_id": "rtb-010b7ef34d2aae39b",
            "subnet_id": "subnet-05feca6b353bf1e1b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_floiint",
            "aws_route_table.floiint_public_route_table",
            "aws_subnet.public_subnet_floiint",
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group_floiint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:security-group/sg-0ffa30a21372aae47",
            "description": "Allow SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffa30a21372aae47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDb",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "floiint-t",
            "name_prefix": "",
            "owner_id": "392002456877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-floiint-t",
              "Terrarom": "true"
            },
            "tags_all": {
              "Name": "sg-floiint-t",
              "Terrarom": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_floiint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:subnet/subnet-0340b773dc1ca33f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0340b773dc1ca33f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "392002456877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-floiint-t",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "subnet-private-floiint-t",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "dependencies": [
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_floiint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:subnet/subnet-05feca6b353bf1e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05feca6b353bf1e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "392002456877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-floiint-t",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "subnet-public-floiint-t",
              "Terraform": "Yes"
            },
            "vpc_id": "vpc-05e89850381fb9e5a"
          },
          "dependencies": [
            "aws_vpc.vpc_floiint_t"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_floiint_t",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:392002456877:vpc/vpc-05e89850381fb9e5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0cb32c9c28a350110",
            "default_route_table_id": "rtb-037fed20f32199f26",
            "default_security_group_id": "sg-0695711c10e59c5f4",
            "dhcp_options_id": "dopt-c88255a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e89850381fb9e5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037fed20f32199f26",
            "owner_id": "392002456877",
            "tags": {
              "Name": "vpc-floiint-t",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "vpc-floiint-t",
              "Terraform": "Yes"
            }
          }
        }
      ]
    }
  ]
}